@@ -1,0 +1,81 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!--// $Id$ //-->
+<html><head>
+<meta name="GENERATOR" content="LMS {$layout.lmsv}">
+<meta http-equiv="Content-Language" content="{$LANGDEFS.$_language.html}">
+<meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_language.charset}">
+<title>::: LMS :{if $layout.pagetitle neq ""} {$layout.pagetitle} :{/if}::</title>
+<link href="img/style.css" rel="stylesheet" type="text/css">
+<script language="JavaScript" type="text/JavaScript" src="img/common.js"> </script>
+{if $js}<script language="JavaScript">
+<!--
+	{$js}
+//-->
+</script>{/if}
+</head>
+{if ! $part}
+<frameset name="all" frameborder="0" framespacing="0" ROWS="36,*">
+	<frame scrolling="no" frameborder="0" marginheight="0" marginwidth="0" name="cal" noresize src="?m=choosecustomer&p=top">
+	<frame scrolling="always" frameborder="0" marginheight="0" marginwidth="0" name="m" noresize src="?m=choosecustomer&p=main">
+</frameset>
+{/if}
+{if $part eq "top"}
+<body>
+<form name="search" method="post" action="?m=choosecustomer&p=main" target="m">
+<input type="submit" class="hiddenbtn">
+<table cellpadding="5" width="100%">
+	<tr>
+		<td class="fall dark" align="center" nowrap><b>{t}Search{/t}:</b>
+			<input name="search" value="{$search}" size="15">&nbsp;
+			<select size="1" name="cat">
+				<option value="id"{if $cat=="id"} SELECTED{/if}>{t}ID{/t}</option>
+				<option value="name"{if $cat=="name" || !$cat} SELECTED{/if}>{t}customer name{/t}</option>
+				<option value="ten"{if $cat=="ten"} SELECTED{/if}>{t}TEN{/t}</option>
+				<option value="address"{if $cat=="address"} SELECTED{/if}>{t}address{/t}</option>
+				<option value="node"{if $cat=="node"} SELECTED{/if}>{t}node name{/t}</option>
+			</select>
+			&nbsp;<A href="javascript: document.search.submit();">&raquo;&raquo;&raquo;</A>
+		</td>
+	</tr>
+</table>
+</form>
+<script language="JavaScript">
+<!--
+document.search.search.focus();
+//-->
+</script>
+</body>
+{/if}
+{if $part eq "main"}
+<body>
+<table cellpadding="3" width="100%">
+	{cycle values="light,lucid" print=false}
+	{section name=customerlist loop=$customerlist}
+	<tr class="{cycle}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
+		<td {$customerlist[customerlist].id} style="vertical-align: top;" onClick="sendvalue(targetfield,'{$customerlist[customerlist].id}');">
+			<b>{$customerlist[customerlist].customername}</b>
+			({$customerlist[customerlist].id|string_format:"%04d"})<br>
+			{$customerlist[customerlist].address}{if $customerlist[customerlist].city neq ""},{/if} {$customerlist[customerlist].zip} {$customerlist[customerlist].city}
+		</td>
+		<td width="1%" align="right" style="vertical-align: top;" onClick="sendvalue(targetfield,'{$customerlist[customerlist].id}');">
+			{foreach from=$customerlist[customerlist].nodes item=node}
+			{$node.name}
+			{/foreach}
+		</td>
+		<td align="right" nowrap style="vertical-align: top;" onClick="sendvalue(targetfield,'{$customerlist[customerlist].id}');">
+			{if $customerlist[customerlist].balance < 0}<font class="alert">{/if}{$customerlist[customerlist].balance|money_format}{if $customerlist[customerlist].balance < 0}</font>{/if}
+		</td>
+	</tr>
+	{sectionelse}
+	<tr>
+		<td colspan="3" align="center">
+			<p>&nbsp;</p>
+			<p><b>{t}No such customers matching search criteria.{/t}</b></p>
+			<p>&nbsp;</p>
+		</td>
+	</tr>
+	{/section}
+</table>
+</body>
+{/if}
+</html>	
