@@ -136,19 +136,7 @@
 				<OPTION VALUE="{$c.id}"{if $c.id eq $customer.id || $receipt.customerid eq $c.id} SELECTED{/if}>{$c.customername|truncate:40:"...":true} ({$c.id|string_format:"%04d"})</OPTION>
 				{/foreach}
 			</SELECT>
-			{*
-			{t}or Customer ID:{/t}
-			<INPUT TYPE="TEXT" NAME="customerid" VALUE="{if $customer.id}{$customer.id}{else}{if $receipt.customerid}{$receipt.customerid}{/if}{/if}" SIZE="5" onChange="document.setcustomer.customer.value=document.setcustomer.customerid.value">
-			*}
-			{t}or search:{/t}
-			<INPUT name="receipt[search]" value="{$receipt.search}" size="15" {tip text="Enter value of searching data and select category"}>&nbsp;
-			<SELECT size="1" name="receipt[cat]">
-				<OPTION value="id"{if $receipt.cat=="id"} SELECTED{/if}>{t}ID{/t}</OPTION>
-				<OPTION value="name"{if $receipt.cat=="name"} SELECTED{/if}>{t}customer name{/t}</OPTION>
-				<OPTION value="ten"{if $receipt.cat=="ten"} SELECTED{/if}>{t}TEN{/t}</OPTION>
-				<OPTION value="address"{if $receipt.cat=="address"} SELECTED{/if}>{t}address{/t}</OPTION>
-				<OPTION value="node"{if $receipt.cat=="node"} SELECTED{/if}>{t}node name{/t}</OPTION>
-			</SELECT>
+			<a href="javascript: void(0);" onClick="return customerchoosewin(document.setcustomer.customer);" {tip text="Click to search customer"}>&raquo;&raquo;&raquo;</A>
 			{if  $cashregcount > 1 && $receipt.type=="out"}
 			<BR>
 			<INPUT TYPE="radio" NAME="receipt[o_type]" VALUE="move" class="box light" {if $receipt.o_type=="move"} checked{/if}> {t}assets move{/t}
