@@ -44,6 +44,7 @@ version ? (????-??-??):
   - changed/improved financial documents settlement for multiuser 
     environment (alec)
   - automatic columns width setting on pdf invoices (alec)
+  - new customers searching popup form in cash receipts interface (alec)
 
 version 1.9.0 Tilgath (2005-12-07):
 
